--- a/Aufgabe 0/Aufgabe0.html
+++ b/Aufgabe 0/Aufgabe0.html
@@ -12,6 +12,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 <title>Aufgabe0</title>
 </head>
 <body>
+	TEST
 <main id="content>
 </body>
 </html>
