--- a/Aufgabe 0/Aufgabe0.html
+++ b/Aufgabe 0/Aufgabe0.html
@@ -1,18 +1,19 @@
-/**
+<!--
 Aufgabe: 0
 Name: Jan Dangschat
 Matrikel: 259522 
 Datum: 04.10.2018
 	
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert.
-**/
+-->
 
 <html>
 <head>
+<script src="Aufgabe0.js"></script>
 <title>Aufgabe0</title>
 </head>
 <body>
-	TEST
-<main id="content>
+	
+<main id="content">
 </body>
 </html>
