Java Script Link

--- a/Aufgabe 0/Aufgabe0.html
+++ b/Aufgabe 0/Aufgabe0.html
@@ -13,7 +13,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 <title>Aufgabe0</title>
 </head>
 <body>
-	
+<a href ="https://github.com/dangscha/EIA2/blob/master/Aufgabe%200/Aufgabe0.js">JavaScript</a>	
 <main id="content">
 </body>
 </html>
