--- a/Aufgabe 0/Aufgabe0.html
+++ b/Aufgabe 0/Aufgabe0.html
@@ -9,6 +9,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 
 <html>
 <head>
+<<link rel="stylesheet" href="style.css">
 <script src="Aufgabe0.js"></script>
 <title>Aufgabe0</title>
 </head>
