--- a/Aufgabe 3/Aufgabe3.html
+++ b/Aufgabe 3/Aufgabe3.html
@@ -9,8 +9,8 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 
 <html>
 <head>
-<script src="Aufgabe2b.js"></script>
-<link rel="stylesheet" type="text/css" href="Aufgabe2b.css">
+<script src="Aufgabe3.js"></script>
+<link rel="stylesheet" type="text/css" href="Aufgabe3.css">
 <title>Aufgabe2</title>
 </head>
 <body>
