--- a/Aufgabe 3/Aufgabe3.html
+++ b/Aufgabe 3/Aufgabe3.html
@@ -11,7 +11,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 <head>
 <script src="Aufgabe3.js"></script>
 <link rel="stylesheet" type="text/css" href="Aufgabe3.css">
-<title>Aufgabe2</title>
+<title>Uno</title>
 </head>
 <body>
 <button id="button">Sortieren</button>
