--- a/Aufgabe 4/Aufgabe4.html
+++ b/Aufgabe 4/Aufgabe4.html
@@ -31,7 +31,10 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 <a class="text">Hausnummer:</a><a id="nummer"></a><br>
 <a class="text">PLZ:</a><a id="postleitzahl"></a><br>
 <a class="text">Ort:</a><a id="ort"></a><br>
-<a class="text">Preis:</a><a id="preis"></a>
+<a class="text">Preis:</a><a id="preis"></a><br>
+<button id="check">Eingaben ueberpruefen</button>
+
 </div>
+<div id="buttonCheck"></div>
 </body>
 </html>
