--- a/Aufgabe 4/Aufgabe4.html
+++ b/Aufgabe 4/Aufgabe4.html
@@ -32,7 +32,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 <a class="text">PLZ:</a><a id="postleitzahl"></a><br>
 <a class="text">Ort:</a><a id="ort"></a><br>
 <a class="text">Preis:</a><a id="preis"></a><br>
-<button id="check">Eingaben ueberpruefen</button>
+<button id="check">Pruefen</button>
 
 </div>
 <div id="buttonCheck"></div>
