--- a/Aufgabe 5/Aufgabe5.html
+++ b/Aufgabe 5/Aufgabe5.html
@@ -22,9 +22,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 <div id="checkout">
 <h3>Checkout</h3>
 <a class="text">Baum:</a><a id="baum"></a><br>
-<a class="text">Glasskugeln:</a><a id="kugeln"></a><br>
-<a class="text">Kerzen:</a><a id="kerzen"></a><br>
-<a class="text">Lametta:</a><a id="lametta"></a><br>
+<a class="text"></a><a id="deko"></a><br>
 <a class="text">Halterung:</a><a id="halterung"></a><br>
 <a class="text">Lieferant:</a><a id="lieferant"></a><br>
 <a class="text">Strasse:</a><a id="strass"></a><br>
