--- a/Aufgabe7/WBK/Aufgabe7.html
+++ b/Aufgabe7/WBK/Aufgabe7.html
@@ -22,17 +22,18 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 
 <div id="checkout">
 <h3>Checkout</h3>
-<a class="text">Baum:</a><a id="baum"></a><br>
-<a class="text"></a><a id="deko"></a><br>
-<a class="text">Halterung:</a><a id="halterung"></a><br>
-<a class="text">Lieferant:</a><a id="lieferant"></a><br>
-<a class="text">Strasse:</a><a id="strass"></a><br>
-<a class="text">Hausnummer:</a><a id="nummer"></a><br>
-<a class="text">PLZ:</a><a id="postleitzahl"></a><br>
-<a class="text">Ort:</a><a id="ort"></a><br>
+<a class="text">Baum:</a><a id="baum" class="checkout"></a><br>
+<a class="text">Deko:</a><a id="deko"></a><br>
+<a class="text">Halterung:</a><a id="halterung" class="checkout"></a><br>
+<a class="text">Lieferant:</a><a id="lieferant" class="checkout"></a><br>
+<a class="text">Strasse:</a><a id="strass" class="checkout"></a><br>
+<a class="text">Hausnummer:</a><a id="nummer" class="checkout"></a><br>
+<a class="text">PLZ:</a><a id="postleitzahl" class="checkout"></a><br>
+<a class="text">Ort:</a><a id="ort" class="checkout"></a><br>
 <a class="text">Preis:</a><a id="preis"></a><br>
 <button id="check">Pruefen</button>
-<button id="submit" type="submit">Submit</button>
+<button id="submit" type="submit">Bestellung ueberpruefen</button>
+<button type="button" id="lul">Submit</button>
 
 </div>
 <div id="buttonCheck"></div>
