--- a/Aufgabe 5/Aufgabe5.html
+++ b/Aufgabe 5/Aufgabe5.html
@@ -31,11 +31,13 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 <a class="text">PLZ:</a><a id="postleitzahl" class="checkout"></a><br>
 <a class="text">Ort:</a><a id="ort" class="checkout"></a><br>
 <a class="text">Preis:</a><a id="preis"></a><br>
+
 <button id="check">Pruefen</button>
 <button id="submit" type="submit">Bestellung ueberpruefen</button>
 <button type="button" id="lul">Submit</button>
 
 </div>
+<div id="ausgabe"></div>
 <div id="buttonCheck"></div>
 </form>
 </body>
