--- a/Aufgabe8b/Client/DatabaseClient.html
+++ b/Aufgabe8b/Client/DatabaseClient.html
@@ -25,5 +25,8 @@
 		<button type="button" id="refresh">Refresh</button>
 		<textarea rows="20" cols="90"> </textarea>
 	</fieldset>
+	<fieldset>
+	<p id="outputSearch">
+	</fieldset>
 </body>
 </html>
