--- a/Aufgabe8b/Client/DatabaseClient.html
+++ b/Aufgabe8b/Client/DatabaseClient.html
@@ -26,6 +26,7 @@
 		<textarea rows="20" cols="90"> </textarea>
 	</fieldset>
 	<fieldset>
+	<legend> Search </legend>
 	<p id="outputSearch">
 	</fieldset>
 </body>
