--- a/Aufgabe9/canvas.html
+++ b/Aufgabe9/canvas.html
@@ -6,7 +6,7 @@
 <script src="Canvas.js" type="text/javascript" charset="utf-8"></script>
  </head>
 <body>
-	<canvas width=360 height=730 id="myCanvas"></canvas>
+	<canvas width=360 height=730 id="canvas"></canvas>
 	<script>
  
 
