--- a/Aufgabe10/A10.html
+++ b/Aufgabe10/A10.html
@@ -3,7 +3,9 @@
 <head>
 <title>Canvas</title>
 <meta charset="utf-8" />
-<script src="Canvas.js" type="text/javascript" charset="utf-8"></script>
+<script src="Main.js" type="text/javascript" charset="utf-8"></script>
+<script src="Snowflake.js" type="text/javascript" charset="utf-8"></script>
+<script src="Tree.js" type="text/javascript" charset="utf-8"></script>
  </head>
 <body>
 	<canvas width=360 height=730 id="canvas"></canvas>
