--- a/Aufgabe10/A10.html
+++ b/Aufgabe10/A10.html
@@ -4,10 +4,10 @@
 <title>Canvas</title>
 <meta charset="utf-8" />
 <script src="Main.js" type="text/javascript" charset="utf-8"></script>
-<script src="Snowflake.js" type="text/javascript" charset="utf-8"></script>
-<script src="Tree.js" type="text/javascript" charset="utf-8"></script>
-<script src="ChildUp.js" type="text/javascript" charset="utf-8"></script>
-<script src="ChildDown.js" type="text/javascript" charset="utf-8"></script>
+<script src="Classes/Snowflake.js" type="text/javascript" charset="utf-8"></script>
+<script src="Classes/Tree.js" type="text/javascript" charset="utf-8"></script>
+<script src="Classes/ChildUp.js" type="text/javascript" charset="utf-8"></script>
+<script src="Classes/ChildDown.js" type="text/javascript" charset="utf-8"></script>
  </head>
 <body>
 	<canvas width=360 height=730 id="canvas"></canvas>
