--- a/Aufgabe10/A10.html
+++ b/Aufgabe10/A10.html
@@ -6,7 +6,7 @@
 <script src="Main.js" type="text/javascript" charset="utf-8"></script>
 <script src="Classes/Snowflake.js" type="text/javascript" charset="utf-8"></script>
 <script src="Classes/Tree.js" type="text/javascript" charset="utf-8"></script>
-<script src="Classes/ChildUp.js" type="text/javascript" charset="utf-8"></script>
+<script src="Classes/Child1.js" type="text/javascript" charset="utf-8"></script>
 <script src="Classes/ChildDown.js" type="text/javascript" charset="utf-8"></script>
  </head>
 <body>
