--- a/Aufgabe10/A10.html
+++ b/Aufgabe10/A10.html
@@ -7,7 +7,7 @@
 <script src="Classes/Snowflake.js" type="text/javascript" charset="utf-8"></script>
 <script src="Classes/Tree.js" type="text/javascript" charset="utf-8"></script>
 <script src="Classes/Child1.js" type="text/javascript" charset="utf-8"></script>
-<script src="Classes/ChildDown.js" type="text/javascript" charset="utf-8"></script>
+<script src="Classes/Child2.js" type="text/javascript" charset="utf-8"></script>
  </head>
 <body>
 	<canvas width=360 height=730 id="canvas"></canvas>
