--- a/Aufgabe11/A11.html
+++ b/Aufgabe11/A11.html
@@ -4,6 +4,8 @@
 <title>Canvas</title>
 <meta charset="utf-8" />
 <script src="Main.js" type="text/javascript" charset="utf-8"></script>
+<script src="Classes/Objects.js" type="text/javascript" charset="utf-8"></script>
+<script src="Classes/Movement.js" type="text/javascript" charset="utf-8"></script>
 <script src="Classes/Snowflake.js" type="text/javascript" charset="utf-8"></script>
 <script src="Classes/Tree.js" type="text/javascript" charset="utf-8"></script>
 <script src="Classes/Child1.js" type="text/javascript" charset="utf-8"></script>
