--- a/Endabgabe/A11.html
+++ b/Endabgabe/A11.html
@@ -14,8 +14,11 @@
 <script src="Classes/Snowball.js" type="text/javascript" charset="utf-8"></script>
  </head>
 <body>
+<div id="timer"></div>
+<div id="Baelle"></div>
 <div id="div">
 <h1>Rodelhang-Terminator</h1>
+<h2>Regeln: Mit 10 Baellen die meisten Punkte erzielen</h2>
 <button id="start">Start</button></br>
 <button id="scores">HighScores</button>
 </div>
