--- a/Endabgabe/A11.html
+++ b/Endabgabe/A11.html
@@ -16,20 +16,11 @@
 
  </head>
 <body>
-<	<fieldset id="input">
-		<legend> Type student data here </legend>
-		<input type="text" name="name" placeholder="name" id="name" />
-		
-		<button type="button" id="insert">Insert to database</button>
-	</fieldset>
-	<fieldset id="output">
-		<legend> All student data </legend>
-		<button type="button" id="refresh">Refresh</button>
-		<textarea rows="20" cols="90"> </textarea>
-	</fieldset>
+	
 
 <div id="timer"></div>
 <div id="Baelle"></div>
+<div id="score"></div>
 <div id="div">
 <h1>Rodelhang-Terminator</h1>
 <h2>Regeln: Mit 10 Baellen die meisten Punkte erzielen</h2>
