--- a/Endabgabe/A11.html
+++ b/Endabgabe/A11.html
@@ -27,6 +27,25 @@
 <button id="start">Start</button></br>
 <button id="scores">HighScores</button>
 </div>
+
+<div id="EndScreen">
+<h3>Game Over</h3>
+<p id="endScore"></p></br>
+<button id="restart">Restart</button></br>
+
+<fieldset id="input"></br>
+<legend> Highscore hier eintragen!</legend>
+<input type="text" name="name" placeholder="Name eintragen" id="name"/>
+<button type="button" id="insert">Score absenden</button>
+</fieldset>
+
+<fieldset id="output">
+<legend>Highscores </legend>
+<button type= "button" id= "refresh"> Refresh </button>
+<textarea rows= "20" cols= "90"></textarea>
+</fieldset>
+
+</div>
 	<canvas width=360 height=730 id="canvas"></canvas>
 	
 	
