--- a/Endabgabe/A11.html
+++ b/Endabgabe/A11.html
@@ -42,9 +42,9 @@
 <fieldset id="output">
 <legend>Highscores </legend>
 <button type= "button" id= "refresh"> Refresh </button>
-<textarea rows= "20" cols= "90"></textarea>
-</fieldset>
 
+</fieldset>
+<div id="scores" rows= "20" cols= "90"></div>
 </div>
 	<canvas width=360 height=730 id="canvas"></canvas>
 	
