--- a/Endabgabe/A11.html
+++ b/Endabgabe/A11.html
@@ -23,7 +23,7 @@
 <div id="score"></div>
 <div id="div">
 <h1>Rodelhang-Terminator</h1>
-<h2>Regeln: Mit 10 Baellen die meisten Punkte erzielen</h2>
+<h2>Regeln: Mit 20 Baellen soviele Kinder wie moeglich treffen</h2>
 <button id="start">Start</button></br>
 <button id="scores">HighScores</button>
 </div>
@@ -46,7 +46,7 @@
 <div id="scores" rows= "20" cols= "90"></div>
 
 </div>
-	<canvas width=360 height=730 id="canvas"></canvas>
+	<canvas class"crosshair" width=360 height=730 id="canvas"></canvas>
 	
 	
 
