--- a/Endabgabe/A11.html
+++ b/Endabgabe/A11.html
@@ -43,7 +43,7 @@
 <legend>Highscores </legend>
 <button type= "button" id= "refresh"> Refresh </button>
 </fieldset>
-<div id="scores" rows= "20" cols= "90"></div>
+<div id="scores"></div>
 
 </div>
 	<canvas class"crosshair" width=360 height=730 id="canvas"></canvas>
